--- a/ga_sandbox/vs.net/chap2ex1.vcproj
+++ b/ga_sandbox/vs.net/chap2ex1.vcproj
@@ -67,6 +67,7 @@
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="..\"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="4"
 				UsePrecompiledHeader="0"
