--- a/ga_sandbox/Makefile.in
+++ b/ga_sandbox/Makefile.in
@@ -153,7 +153,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-SUBDIRS = libgasandbox chap2
+SUBDIRS = vs.net libgasandbox chap2
 all: all-recursive
 
 .SUFFIXES:
