--- a/ga_sandbox/vs.net/chap2ex2.vcproj
+++ b/ga_sandbox/vs.net/chap2ex2.vcproj
@@ -32,6 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="wsock32.lib"
 				OutputFile="$(OutDir)/chap2ex2.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
@@ -78,6 +79,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="wsock32.lib"
 				OutputFile="$(OutDir)/chap2ex2.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
