--- a/ga_sandbox/libgasandbox/Makefile.am
+++ b/ga_sandbox/libgasandbox/Makefile.am
@@ -3,7 +3,8 @@ lib_LIBRARIES = libgasandbox.a
 libgasandbox_a_includedir       = $(includedir)/libgasandbox
 libgasandbox_a_include_HEADERS = \
 	draw.h  e2ga_draw.h  e3ga.h       e3ga_util.h  mv_analyze.h \
-	common.h     e2ga.h  e2ga_util.h  e3ga_draw.h  geosphere.h  mvtypebase.h
+	common.h     e2ga.h  e2ga_util.h  e3ga_draw.h  geosphere.h  mvtypebase.h \
+	timing.h
 
 
 EXTRA_DIST = e2ga.gs2 e3ga.gs2 e2ga_lexer.g e2ga_parser.g e3ga_lexer.g e3ga_parser.g \
@@ -16,7 +17,7 @@ libgasandbox_a_SOURCES =  \
 	draw.cpp       mv_analyze.cpp \
 	e2ga.cpp       e3ga.cpp            e3ga_util.cpp \
 	e2ga_draw.cpp  e3ga_draw.cpp       geosphere.cpp \
-	glut_util.cpp gl_util.cpp
+	glut_util.cpp gl_util.cpp timing.cpp
 
 
 libgasandbox_a_CFLAGS = 
