--- a/ga_sandbox/vs.net/chap2ex3.vcproj
+++ b/ga_sandbox/vs.net/chap2ex3.vcproj
@@ -120,13 +120,13 @@
 				RelativePath="..\chap2\ex3\fields.cpp">
 			</File>
 			<File
-				RelativePath="..\chap2\ex3\glwindow.cpp">
-			</File>
-			<File
 				RelativePath="..\chap2\ex3\hpindex.cpp">
 			</File>
 			<File
 				RelativePath="..\chap2\ex3\main.cpp">
+			</File>
+			<File
+				RelativePath="..\chap2\ex3\render.cpp">
 			</File>
 		</Filter>
 		<Filter
@@ -137,13 +137,13 @@
 				RelativePath="..\chap2\ex3\fields.h">
 			</File>
 			<File
-				RelativePath="..\chap2\ex3\glwindow.h">
-			</File>
-			<File
 				RelativePath="..\chap2\ex3\hpindex.h">
 			</File>
 			<File
 				RelativePath="..\chap2\ex3\main.h">
+			</File>
+			<File
+				RelativePath="..\chap2\ex3\render.h">
 			</File>
 		</Filter>
 		<Filter
