--- a/ga_sandbox/attic/gaigen2hp/Makefile.am
+++ b/ga_sandbox/attic/gaigen2hp/Makefile.am
@@ -1,11 +1,10 @@
 bin_PROGRAMS = gaigen2hp
 
-AM_CPPFLAGS = -I../.. $(AQSIS_FLTK_CFLAGS)
+AM_CPPFLAGS = -I../.. $(AQSIS_FLTK_GL_CFLAGS)
 
-gaigen2hp_LDADD = $(GL_LIBS) $(AQSIS_FLTK_LIBS) ../../libgasandbox/libgasandbox.a
+gaigen2hp_LDADD = $(GL_LIBS) $(AQSIS_FLTK_GL_LIBS) ../../libgasandbox/libgasandbox.a
 
-gaigen2hp_SOURCES = hpindex.cpp  \
-	fields.cpp  glwindow.cpp  main.cpp
+gaigen2hp_SOURCES = hpindex.cpp fields.cpp  glwindow.cpp  main.cpp
 
 noinst_HEADERS = fields.h  glwindow.h  hpindex.h  main.h
 
