--- a/ga_sandbox/vs.net/Makefile.am
+++ b/ga_sandbox/vs.net/Makefile.am
@@ -1,6 +1,8 @@
 EXTRA_DIST = \
 	all.sln all.ncb all.suo \
 	libgasandbox.vcproj \
-	chap2ex1.vcproj  chap2ex2.vcproj chap2ex3.vcproj  
+	chap2ex1.vcproj  chap2ex2.vcproj chap2ex3.vcproj \
+	chap3ex1.vcproj  chap3ex2.vcproj \
+	gaigen2hp.vcproj
 
 
