--- a/ga_sandbox/configure.ac
+++ b/ga_sandbox/configure.ac
@@ -14,6 +14,8 @@ AC_OUTPUT(
 	chap2/ex1/Makefile\
 	chap2/ex2/Makefile\
 	chap2/ex3/Makefile\
+	chap3/ex1/Makefile\
+	chap3/ex2/Makefile\
 	attic/Makefile\
 	attic/gaigen2hp/Makefile
 	)
