--- a/ga_sandbox/attic/gaigen2hp/Makefile
+++ b/ga_sandbox/attic/gaigen2hp/Makefile
@@ -68,18 +68,18 @@ HEADERS = $(noinst_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Users/fontijne/ga/ga_sandbox/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /root/ga/ga_sandbox/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /Users/fontijne/ga/ga_sandbox/missing --run tar
-AQSIS_FLTK_CFLAGS = -I/opt/local/include -I/opt/local/include
-AQSIS_FLTK_GL_CFLAGS = -I/opt/local/include -I/opt/local/include
-AQSIS_FLTK_GL_LIBS = -L/opt/local/lib -lfltk_gl -framework AGL -framework OpenGL -lfltk -framework Carbon -framework ApplicationServices -lsupc++
-AQSIS_FLTK_LIBS = -L/opt/local/lib -lfltk -framework Carbon -framework ApplicationServices -lsupc++
-AUTOCONF = ${SHELL} /Users/fontijne/ga/ga_sandbox/missing --run autoconf
-AUTOHEADER = ${SHELL} /Users/fontijne/ga/ga_sandbox/missing --run autoheader
-AUTOMAKE = ${SHELL} /Users/fontijne/ga/ga_sandbox/missing --run automake-1.9
-AWK = awk
+AMTAR = ${SHELL} /root/ga/ga_sandbox/missing --run tar
+AQSIS_FLTK_CFLAGS = -I/usr/include/fltk-1.1 -O2 -march=athlon-xp
+AQSIS_FLTK_GL_CFLAGS = -I/usr/include/fltk-1.1 -O2 -march=athlon-xp
+AQSIS_FLTK_GL_LIBS = -L/usr/lib/fltk-1.1 -Wl,-rpath,/usr/lib/fltk-1.1 -lfltk_gl -lGLU -lGL -lfltk -lXft -lpthread -lm -lXext -lX11 -lsupc++
+AQSIS_FLTK_LIBS = -L/usr/lib/fltk-1.1 -Wl,-rpath,/usr/lib/fltk-1.1 -lfltk -lXft -lpthread -lm -lXext -lX11 -lsupc++
+AUTOCONF = ${SHELL} /root/ga/ga_sandbox/missing --run autoconf
+AUTOHEADER = ${SHELL} /root/ga/ga_sandbox/missing --run autoheader
+AUTOMAKE = ${SHELL} /root/ga/ga_sandbox/missing --run automake-1.9
+AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
@@ -95,8 +95,8 @@ ECHO_C =
 ECHO_N = -n
 ECHO_T = 
 EXEEXT = 
-GL_CFLAGS =  -I/usr/X11R6/include -I/opt/local/include
-GL_LIBS = -lGLU -lGL  -lSM -lICE  -L/usr/X11R6/lib -lX11 -lXext -lXmu -lXt -lXi 
+GL_CFLAGS = 
+GL_LIBS = -lglut -lGLU -lGL  -lSM -lICE  -lX11 -lXext -lXmu -lXt -lXi 
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
@@ -105,7 +105,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Users/fontijne/ga/ga_sandbox/missing --run makeinfo
+MAKEINFO = ${SHELL} /root/ga/ga_sandbox/missing --run makeinfo
 OBJEXT = o
 PACKAGE = ga_sandbox
 PACKAGE_BUGREPORT = 
@@ -119,9 +119,9 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = 1.0
-X_CFLAGS =  -I/usr/X11R6/include
+X_CFLAGS = 
 X_EXTRA_LIBS = 
-X_LIBS =  -L/usr/X11R6/lib
+X_LIBS = 
 X_PRE_LIBS =  -lSM -lICE
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -143,12 +143,12 @@ exec_prefix = ${prefix}
 host_alias = 
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /Users/fontijne/ga/ga_sandbox/install-sh
+install_sh = /root/ga/ga_sandbox/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
 mandir = ${prefix}/man
-mkdir_p = $(install_sh) -d
+mkdir_p = mkdir -p --
 oldincludedir = /usr/include
 prefix = /usr/local
 program_transform_name = s,x,x,
