Fixed Mac OS X stuff -This line, and those below, will be ignored--
M    config.log
M    config.status
AM   chap2/ex3/screenshot.png
M    chap2/ex3/.deps/main.Po
M    chap2/ex3/.deps/fields.Po
M    chap2/ex3/.deps/hpindex.Po
M    chap2/ex3/.deps/render.Po
M    chap2/ex3/Makefile
M    chap2/ex1/.deps/chap2ex1.Po
M    chap2/ex1/Makefile
M    chap2/Makefile
M    chap2/ex2/.deps/chap2ex2.Po
M    chap2/ex2/Makefile
M    libgasandbox/Makefile.in
M    libgasandbox/Makefile
M    libgasandbox/Makefile.am
M    chap3/ex1/Makefile
M    chap3/Makefile
M    chap3/ex2/Makefile
M    autom4te.cache/traces.0
M    autom4te.cache/output.0
M    attic/gaigen2hp/Makefile.in
M    attic/gaigen2hp/.deps/main.Po
M    attic/gaigen2hp/.deps/fields.Po
M    attic/gaigen2hp/.deps/glwindow.Po
M    attic/gaigen2hp/.deps/hpindex.Po
M    attic/gaigen2hp/Makefile.am
M    attic/gaigen2hp/Makefile
M    vs.net/Makefile
M    Makefile

--- a/ga_sandbox/attic/gaigen2hp/Makefile.am
+++ b/ga_sandbox/attic/gaigen2hp/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS = gaigen2hp
 
 AM_CPPFLAGS = -I../.. $(AQSIS_FLTK_GL_CFLAGS)
 
-gaigen2hp_LDADD = $(GL_LIBS) $(AQSIS_FLTK_GL_LIBS) ../../libgasandbox/libgasandbox.a
+gaigen2hp_LDADD = $(AQSIS_FLTK_GL_LIBS) ../../libgasandbox/libgasandbox.a
 
 gaigen2hp_SOURCES = hpindex.cpp fields.cpp  glwindow.cpp  main.cpp
 
