--- a/ga_sandbox/vs.net/Makefile.in
+++ b/ga_sandbox/vs.net/Makefile.in
@@ -136,7 +136,7 @@ EXTRA_DIST = \
 	all.sln all.ncb all.suo \
 	libgasandbox.vcproj \
 	chap2ex1.vcproj  chap2ex2.vcproj chap2ex3.vcproj \
-	chap3ex1.vcproj  chap3ex2.vcproj \
+	chap3ex1.vcproj  chap3ex2.vcproj chap3ex3.vcproj  chap3ex4.vcproj \
 	gaigen2hp.vcproj
 
 all: all-am
