--- a/ga_sandbox/vs.net/Makefile.am
+++ b/ga_sandbox/vs.net/Makefile.am
@@ -2,7 +2,8 @@ EXTRA_DIST = \
 	all.sln all.ncb all.suo \
 	libgasandbox.vcproj \
 	chap2ex1.vcproj  chap2ex2.vcproj chap2ex3.vcproj \
-	chap3ex1.vcproj  chap3ex2.vcproj chap3ex3.vcproj  chap3ex4.vcproj \
+	chap3ex1.vcproj  chap3ex2.vcproj chap3ex3.vcproj chap3ex4.vcproj \
+	chap4ex1.vcproj  chap4ex2.vcproj chap4ex3.vcproj \
 	gaigen2hp.vcproj
 
 
