--- a/ga_sandbox/vs.net/libgasandbox.vcproj
+++ b/ga_sandbox/vs.net/libgasandbox.vcproj
@@ -202,6 +202,9 @@
 				RelativePath="..\libgasandbox\e3ga_util.h">
 			</File>
 			<File
+				RelativePath="..\libgasandbox\gabits.h">
+			</File>
+			<File
 				RelativePath="..\libgasandbox\geosphere.h">
 			</File>
 			<File
