--- a/ga_sandbox/configure.ac
+++ b/ga_sandbox/configure.ac
@@ -34,6 +34,9 @@ AC_OUTPUT(
 	chap5/ex3/Makefile \
 	\
 	chap6/Makefile \
+	chap6/ex1/Makefile \
+	chap6/ex2/Makefile \
+	chap6/ex3/Makefile \
 	\
 	chap7/Makefile \
 	\
