--- a/ga_sandbox/vs.net/Makefile.am
+++ b/ga_sandbox/vs.net/Makefile.am
@@ -4,6 +4,8 @@ EXTRA_DIST = \
 	chap2ex1.vcproj  chap2ex2.vcproj chap2ex3.vcproj \
 	chap3ex1.vcproj  chap3ex2.vcproj chap3ex3.vcproj chap3ex4.vcproj \
 	chap4ex1.vcproj  chap4ex2.vcproj chap4ex3.vcproj \
+	chap5ex1.vcproj  chap5ex2.vcproj chap5ex3.vcproj \
+	chap6ex1.vcproj  chap6ex2.vcproj chap6ex3.vcproj \
 	gaigen2hp.vcproj
 
 
