Modified for install in bin/ga_sandbox Added makefiles for new exercises

--- a/ga_sandbox/Makefile.am
+++ b/ga_sandbox/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS = libgasandbox chap2 chap3 chap4 chap5 chap6 chap7 vs.net attic
+SUBDIRS = libgasandbox chap2 chap3 chap4 chap5 chap6 chap7 solutions vs.net attic
