--- a/ga_sandbox/vs.net/Makefile.am
+++ b/ga_sandbox/vs.net/Makefile.am
@@ -6,6 +6,7 @@ EXTRA_DIST = \
 	chap4ex1.vcproj  chap4ex2.vcproj chap4ex3.vcproj \
 	chap5ex1.vcproj  chap5ex2.vcproj chap5ex3.vcproj \
 	chap6ex1.vcproj  chap6ex2.vcproj chap6ex3.vcproj \
+	chap7ex1.vcproj  chap7ex2.vcproj chap7ex3.vcproj chap7ex4.vcproj \
 	gaigen2hp.vcproj
 
 
