Fixed linux stuff

--- a/ga_sandbox/solutions/vs.net/Makefile
+++ b/ga_sandbox/solutions/vs.net/Makefile
@@ -136,7 +136,9 @@ EXTRA_DIST = \
 	solutions.sln solutions.ncb solutions.suo \
 	chap2ex2s.vcproj \
 	chap3ex2s.vcproj \
-	chap6ex1s.vcproj
+	chap6ex1s.vcproj \
+	chap6ex3s.vcproj \
+	chap7ex4s.vcproj
 
 all: all-am
 
