--- a/ga_sandbox/Makefile.am
+++ b/ga_sandbox/Makefile.am
@@ -1,1 +1,4 @@
 SUBDIRS = libgasandbox chap2 chap3 chap4 chap5 chap6 chap7 chap8 chap10 chap11 chap12 solutions vs.net attic
+
+
+EXTRA_DIST = REQUIRED_LIBRARIES SOLARIS MACOSX
