--- a/ga_sandbox/vs.net/Makefile.am
+++ b/ga_sandbox/vs.net/Makefile.am
@@ -1,13 +1,14 @@
 EXTRA_DIST = \
 	all.sln all.ncb all.suo \
 	libgasandbox.vcproj libgasandboxparse.vcproj \
-	chap2ex1.vcproj  chap2ex2.vcproj chap2ex3.vcproj \
-	chap3ex1.vcproj  chap3ex2.vcproj chap3ex3.vcproj chap3ex4.vcproj \
-	chap4ex1.vcproj  chap4ex2.vcproj chap4ex3.vcproj \
-	chap5ex1.vcproj  chap5ex2.vcproj chap5ex3.vcproj \
-	chap6ex1.vcproj  chap6ex2.vcproj chap6ex3.vcproj \
-	chap7ex1.vcproj  chap7ex2.vcproj chap7ex3.vcproj chap7ex4.vcproj \
-	chap10ex1.vcproj  chap10ex2.vcproj chap10ex3.vcproj \
+	chap2ex1.vcproj chap2ex2.vcproj chap2ex3.vcproj \
+	chap3ex1.vcproj chap3ex2.vcproj chap3ex3.vcproj chap3ex4.vcproj \
+	chap4ex1.vcproj chap4ex2.vcproj chap4ex3.vcproj \
+	chap5ex1.vcproj chap5ex2.vcproj chap5ex3.vcproj \
+	chap6ex1.vcproj chap6ex2.vcproj chap6ex3.vcproj \
+	chap7ex1.vcproj chap7ex2.vcproj chap7ex3.vcproj chap7ex4.vcproj \
+	chap10ex1.vcproj chap10ex2.vcproj chap10ex3.vcproj \
+	chap11ex1.vcproj \
 	gaigen2hp.vcproj
 
 
